Ajustes no HTML
Adição de um artigo e mudanças no rodapé

--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
             <h2>Título B</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat facilis autem vitae neque eius.</p>
         </article>
+        <article>
+            <h2>Título C</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat facilis .</p>
+        </article>
     </main>
 
     <footer>
-        <p>site exemplo</p>
+        <p>Exemplo de Brench no Git e GitHub</p>
     </footer>
 </body>
 </html>
