--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
     <footer>
         <p>Exemplo de Brench no Git e GitHub</p>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
